--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,5 +16,7 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-sdk android:minSdkVersion="16"
+        android:targetSdkVersion="L" />
 
 </manifest>
