Updated target version number to an integer, so that it can work on more than just developer devices

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 'android-L'
+    compileSdkVersion 'android-20'
     buildToolsVersion "20.0.0"
 
     defaultConfig {
         applicationId "org.gringene.concentricclock"
         minSdkVersion 16
-        targetSdkVersion 'L'
-        versionCode 2
-        versionName "1.1"
+        targetSdkVersion 20
+        versionCode 3
+        versionName "1.1.1"
     }
     buildTypes {
         release {
